<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nome"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/cpf_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="CPF"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="E-mail"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Data de Nascimento"
            android:textSize="16sp" />

        <DatePicker
            android:id="@+id/birthdate_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />


        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/gender_array"
            android:minHeight="48dp" />

        <LinearLayout
            android:id="@+id/destinations_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/add_destination_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adicionar Destino" />

        <Button
            android:id="@+id/add_traveler_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adicionar Viajante" />

        <LinearLayout
            android:id="@+id/travelers_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/notes_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Observações"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submeter Pedido" />

    </LinearLayout>
</ScrollView>
