<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/additional_traveler_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nome do Viajante"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Data de Nascimento"
        android:textSize="16sp" />

    <DatePicker
        android:id="@+id/additional_traveler_birth_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <Spinner
        android:id="@+id/additional_traveler_gender_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/gender_array"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/additional_traveler_filiation_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Filiação"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/confirm_traveler_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="Confirmar Viajante" />

</LinearLayout>
